# closed-chain-ik-js

./: .gitignore  BENCHMARK.md  README.md  package.json
.github/workflows/: build-examples.yml  ci.yml  copilot-setup-steps.yml  node.js.yml
cpp/ccik/: CMakeLists.txt
cpp/ccik/bindings/: embind.cpp
cpp/ccik/include/ccik/: Chain.h  IKSolver.h  Types.h
cpp/ccik/src/: Chain.cpp  IKSolver.cpp
cpp/ccik/tests/: chain_tests.cpp  solver_tests.cpp
docs/: porting-map.md
examples/: node-wasm-example.js  wasm-demo.html  wasm-demo.js
lib/: ccik-wasm.js
scripts/: axis-to-dof.js  compare-results.js
src/three/: IKRootsHelper.js
test/: ccik-wasm-bindings.test.js
test/core/: Joint.test.js  MatrixPool.test.js  Solver.integration.test.js
